# rai

./: .gitignore  CMakeLists.txt  LICENSE  RAI.pc.in  RAIConfig.cmake.in  RAIConfigVersion.cmake.in  Readme.md  install_basics.sh  install_tensorflow.sh
RAI/include/rai/: RAI_Tensor.hpp  RAI_Vector.hpp  RAI_core
RAI/include/rai/algorithm/: AG_tree.hpp  AG_tree2.hpp  AG_treeJH.hpp  AG_tree_P.hpp  CMAES.hpp  DDPG.hpp  DDTS.hpp  DDTS2.hpp  OVL.hpp  PPO.hpp  RDPG.hpp  RPPO.hpp  SPG_gae.hpp  TRPO_gae.hpp  TRPO_robust.hpp
RAI/include/rai/algorithm/common/: DataStruct.hpp  LearningData.hpp  LearningData_backup.hpp  PerformanceTester.hpp  dataStruct.hpp
RAI/include/rai/algorithm/tests/: CMakeLists.txt  testDeepDeterministicPolicyGradient.cpp
RAI/include/rai/common/: StopWatch.hpp  TypeDef.hpp  VectorHelper.hpp
RAI/include/rai/common/DynamicSimulation/: Contact.hpp  GaussSeidal.hpp  RAI_contact_solver2.hpp  RAI_contact_solver5.hpp  UnilateralContact.hpp
RAI/include/rai/common/math/: ConjugateGradient.hpp  GoldenSectionMethod.hpp  RAI_math.hpp  RandomNumberGenerator.hpp  inverseUsingCholesky.hpp
RAI/include/rai/experienceAcquisitor/: Acquisitor.hpp  AcquisitorCommonFunc.hpp  ExperienceTupleAcquisitor.hpp  ExperienceTupleAcquisitor_Parallel.hpp  ExperienceTupleAcquisitor_Sequential.hpp  TrajectoryAcquisitor.hpp  TrajectoryAcquisitor_MultiThreadBatch.hpp  TrajectoryAcquisitor_Parallel.hpp  TrajectoryAcquisitor_Sequential.hpp  TrajectoryAcquisitor_SingleThreadBatch.hpp
RAI/include/rai/function/common/: AdditiveStochasticPolicy.hpp  DeterministicModel.hpp  DeterministicPolicy.hpp  LowDiscrepancyPolicy.hpp  Model.hpp  ParameterizedFunction.hpp  Policy.hpp  Qfunction.hpp  SimpleMLP2Layer.hpp  SimpleMLPLayer.hpp  StochasticPolicy.hpp  ValueFunction.hpp
RAI/include/rai/function/tensorflow/: DeterministicModel.hpp  DeterministicModel_TensorFlow.hpp  DeterministicPolicy_TensorFlow.hpp  DeterministicRecurrentModel.hpp  Model.hpp  Qfunction_TensorFlow.hpp  RecurrentDeterministicPolicy_Tensorflow.hpp  RecurrentQfunction_TensorFlow.hpp  RecurrentStochasticPolicyValue_TensorFlow.hpp  RecurrentStochasticPolicy_TensorFlow.hpp  RecurrentValueFunction_TensorFlow.hpp  (+2 more)
RAI/include/rai/function/tensorflow/pythonProtobufGenerators/test/: CMakeLists.txt  testPBgenerators_Policy.cpp  testPBgenerators_Q.cpp  testPBgenerators_Stochpol.cpp  testPBgenerators_V.cpp  testPBgenerators_multiGPU.cpp
RAI/include/rai/memory/: BellmanTuples.hpp  ReplayMemoryHistory.hpp  ReplayMemoryS.hpp  ReplayMemorySARS.hpp  Trajectory.hpp
RAI/include/rai/noiseModel/: EpsilonNoise.hpp  NoNoise.hpp  Noise.hpp  NormalDistributionNoise.hpp  OrnsteinUhlenbeckNoise.hpp
RAI/src/tasks/poleBalancing/: CMakeLists.txt  test_poleBal.cpp
RAI/src/tasks/poleBalancing/visualizer/: Pole_Visualizer.cpp
RAI/src/tasks/poleBalancing1D/: CMakeLists.txt
RAI/src/tasks/quadrotor/: CMakeLists.txt
RAI/taskModules/poleBalancing/cadModel/: rotation.stl
applications/examples/DIY/: CMakeLists.txt  customAlgo.hpp  run.cpp
applications/examples/DIY/functions/: customPolicy.hpp  customValue.hpp
applications/examples/DIY/proto/: MLP_.py  customPolicy.py  customValue.py  protobufGenerator.py
applications/examples/poleBalwithDDPG/: CMakeLists.txt  poleBalwithDDPG.cpp  poleBalwithRDPG.cpp  simplifiedVersion.cpp
applications/examples/poleBalwithPPO/: CMakeLists.txt  poleBalwithPPO.cpp  poleBalwithPPO_recurrentPolicy.cpp  poleBalwithRPPO.cpp
applications/examples/poleBalwithRDPG/: CMakeLists.txt  poleBalwithRDPG.cpp
applications/examples/poleBalwithTRPO/: CMakeLists.txt  poleBalwithTRPO.cpp
applications/examples/quadrotorwithAGtree/: CMakeLists.txt  quadrotor_AGtree.cpp  simulator.cpp
applications/examples/quadrotorwithPPO/: CMakeLists.txt  quadrotor_PPO.cpp  quadrotorwithRPPO.cpp  slungloadwithRPPO.cpp
applications/examples/quadrotorwithTRPO/: CMakeLists.txt  quadrotor_TRPO.cpp
applications/tests/: CMakeLists.txt  R_TensorTest.cpp  testConjugateGradient.cpp  testData.cpp  testDeterministicModel.cpp  testMLP.cpp  testMemoryleak.cpp  testRandomSampling.cpp  testTensorFlow.cpp  test_RNN.cpp  test_glog.cpp
cmake/tensorflowDependencies/: FindEigen3.cmake  tensorflow.cmake
common/: enumeration.hpp
common/DynamicSimulation/: Contact.hpp  GaussSeidal.hpp  RAI_contact_solver.hpp  RAI_contact_solver2.hpp  RAI_contact_solver3.hpp  RAI_contact_solver4.hpp  RAI_contact_solver5.hpp  UnilateralContact.hpp
common/math/: RAI_math.hpp
deepLearning/tensorflowWrapper/: .gitignore
deepLearning/tensorflowWrapper/include/tensorflowWrapper/: TensorFlowNeuralNetwork.hpp
deepLearning/tensorflowWrapper/tests/: CMakeLists.txt  testTensorFlowNeuralNetwork.cpp
deepLearning/tensorflowWrapper/tests/resources/: generate_simple_graph.py  generate_simple_mlp.py  generate_simple_mlp_float64.py  generate_simple_mlp_with_transferable_weights.py  generate_simple_mlp_with_transferable_weights2.py  run_python_scripts.sh
doc/: .gitignore  Makefile  conf.py  index.rst  make.bat
doc/user/: core.rst  installation.rst  qna.rst  rai_modules.rst  simple_example.rst
graphics/: CMakeLists.txt  RAI_graphics.cpp  RAI_graphics.hpp  test.cpp
graphics/imp/: Light.hpp  camera.cpp  camera.h  display.cpp  display.h  obj_loader.cpp  obj_loader.h  shader.cpp  shader.hpp  shader_background.cpp  shader_background.hpp  shader_basic.cpp  shader_basic.h  texture.cpp  transform.h  vector3d.cpp
graphics/res/: basicShader.fs  basicShader.vs  cubeMapShader.vs
logsNplots/: .gitignore
utils/: CMakeLists.txt
utils/RAI_graph/: CMakeLists.txt
utils/RAI_graph/include/gnuplot_wrapper/: gnuplotFigureManager.hpp  gnuplot_cpp.hpp  gnuplotter.hpp
utils/RAI_graph/src/: gnuplotter.cpp  plotting_examples.cpp
utils/RAI_logger/: CMakeLists.txt
utils/RAI_logger/include/RAI_logger/: RAI_logger_ToInclude.hpp
utils/RAI_logger/include/RAI_logger/implementations/: RAI_data.hpp  RAI_logger.hpp
utils/RAI_logger/src/: RAI_logger.cpp  logging_examples.cpp
utils/RAI_timer/: CMakeLists.txt  RAI_timer.cpp  RAI_timer.hpp  RAI_timer_ToInclude.hpp  RAI_timer_items.hpp
(+51 files in other folders)
